--- a/cursed.html
+++ b/cursed.html
@@ -34,7 +34,7 @@
     <div id="cusrsed_main" class="main">
         <div class="inner" id="cusrsed_inner">
             <div id="overlay"></div>
-            <div id="dialog"></div>
+            <div id="dialog" style="padding-top: 60px;"></div>
             <div id="chance">
                 <input type="search" id="answer" name="q">
                 <button id="submit">——</button>
