--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 <div class="wrapper">
-    <div class="main" style="height:100vh;">
+    <div class="main" style="overflow:hidden;">
         <div class="inner">
             <div style="display: flex; align-items: center;">
                 <img src="src/images/star.gif" class="image" alt=""/>
@@ -63,10 +63,8 @@
             </footer>
         </div>
     </div>
-<!--    <div style="display: block">-->
 <!--        <img src="src/images/star1.png" class="stars" alt="" style="left: 10px; height:100px;"/>-->
 <!--        <img src="src/images/star1.png" class="stars" alt="" style="left: 150px; height:150px;"/>-->
-<!--    </div>-->
 </div>
 </body>
 </html>
