-revise font size -revise banner -revise research image

--- a/cursed.html
+++ b/cursed.html
@@ -30,6 +30,9 @@
     <script src="src/script_cursed.js"></script>
 </head>
 <body id="cursed_page">
+<audio id="music" loop>
+    <source src="src/breath.mp3" type="audio/mp3">
+</audio>
 <div class="wrapper">
     <div id="cusrsed_main" class="main">
         <div class="inner" id="cusrsed_inner">
