--- a/contents.html
+++ b/contents.html
@@ -103,7 +103,7 @@
                                             <p>
                                                 我也算是这里的老顾客了，灵幻大师除灵手法一直很老练，每次肩膀很重的症状都有所缓解，大概这里就是属于我的能量场所吧～
                                                 <br>
-                                                不过网站的首页好像有点问题，经常无法访问这点有点困扰啊，希望你们尽快修复哟
+                                                不过网站的HOME键好像有点问题，经常无法访问这点有点困扰啊，希望你们尽快修复哟
                                                 <br>
                                             </p>
                                         </div>
@@ -121,7 +121,7 @@
                                                 头上一直有灵的感觉已经消失了。<br>
                                                 是大师灵力高强的功劳啊！不可思议！<br>
                                                 冥冥之中或许是命运在指引我吧。<br>
-                                                “界限之前请务必告诉我，不要硬抗。”<br>
+                                                “界限之前请务必告诉我，不要硬扛。”<br>
                                                 ——非常感谢大师，非常感谢。<br>
                                             </p>
                                         </div>
