--- a/contents.html
+++ b/contents.html
@@ -258,7 +258,7 @@
                                                             <option selected>选择一个回答</option>
                                                             <option value="1">灵幻新隆</option>
                                                             <option value="2">芹泽克也</option>
-                                                            <option value="3" style="background-color: black">影山茂夫
+                                                            <option value="3" style="background-color: black">████景彡████屾████茂████玞████
                                                             </option>
                                                         </select>
                                                     </div>
