--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
                 <img src="src/images/star.gif" class="image" alt=""/>
             </div>
             <p style="font-family: DotGothic16;">
-                あの <span style="color: #E00000; font-size:500%; text-decoration-line: underline;">おひきさん</span>　を倒した
+                <span style="color: #E00000; font-size:500%; text-decoration-line: underline;">調味市の兄</span>　
                 <br>
             <hr style="opacity: 0;"></hr>
             <p style="font-family: DotGothic16;">
