--- a/contents.html
+++ b/contents.html
@@ -390,7 +390,7 @@
                                             这次委托人带来的都市传说是在约一个月前出现在调味市的神秘网站
                                             <br>
                                             传说这是个被诅咒的网站 <br>
-                                            只有被它选中的人才能打开，网站通向冥界 <br>
+                                            只有被它选中的人才能打开，网站会指引他见到最想见的人 <br>
                                             不仅创建人和创建它的目的是个谜，而且据说最近发生了几起失踪事故均和它有关
                                             <br>
                                             虽然我在对付都市传说方面小有心得 <br>
