--- a/contents.html
+++ b/contents.html
@@ -396,7 +396,7 @@
                                             虽然我在对付都市传说方面小有心得 <br>
                                             但是网站什么的我可谈不上在行，光是能经营这么个小主页就费尽心思了
                                             <br>
-                                            倒不如说，如果真的能去冥界的话 <br>
+                                            倒不如说，如果真的有用的话 <br>
                                             我还真想试试看 <br>
                                             不过委托既然接下来了就好好调查一下吧 <br>
                                             现在的我需要工作来塞满大脑
