-stop music after end -add text

--- a/cursed.html
+++ b/cursed.html
@@ -48,6 +48,7 @@
                 <span id="busuanzi_container_site_pv" style="color:gray">你是第<span id="busuanzi_value_site_pv"></span>个来到这里的</span>
                 <img src="src/images/end1.png" class="image" alt=""/>
                 <img src="src/images/end2.png" class="image" alt=""/>
+                <p style="color:gray">aHR0cHM6Ly93d3cuYmlsaWJpbGkuY29tL3ZpZGVvL0JWMUdKNDExeDdoNw==</p>
             </div>
         </div>
     </div>
