--- a/contents.html
+++ b/contents.html
@@ -28,7 +28,7 @@
             crossorigin="anonymous"></script>
     <script src="src/script.js"></script>
 </head>
-<body>
+<body id="content_page">
 <div class="wrapper">
     <div class="main">
         <div style="height: 100vh;width: 75vw;">
