--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="main_page">
 <div class="wrapper">
     <div class="main" style="overflow:hidden;">
         <div class="inner">
