--- a/404.html
+++ b/404.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>mOHaWiMhIoAw</title>
+    <title>霊とか相談所</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
-    <meta name="description" content="mOHaWiMhIoAw.com"/>
-    <meta property="og:site_name" content="mOHaWiMhIoAw"/>
-    <meta property="og:title" content="mOHaWiMhIoAw"/>
+    <meta name="description" content="reitoka.com"/>
+    <meta property="og:site_name" content="霊とか相談所"/>
+    <meta property="og:title" content="霊とか相談所"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content="mOHaWiMhIoAw.com"/>
+    <meta property="og:description" content="reitoka.com"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="1280"/>
     <meta property="og:image:height" content="800"/>
-    <meta property="og:url" content="https://mOHaWiMhIoAw.com"/>
+    <meta property="og:url" content="https://reitoka.com"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P:400,400italic,100,100italic,700,700italic%7CDroid+Serif:400,400italic,700,700italic"
@@ -29,12 +29,12 @@
             src="https://dss0.bdstatic.com/5aV1bjqh_Q23odCf/static/superman/js/lib/jquery-1-edb203c114.10.2.js"></script>
     <script src="src/script_404.js"></script>
 </head>
-<body id="404_page">
+<body id="page404">
 <div class="wrapper">
     <div id="404_overlay"></div>
     <div id="404_main" class="main">
         <div class="inner" id="404_inner">
-            <img src="src/images/404_text.jpg" class="image" alt=""/>
+            <img src="src/images/fake.jpg" class="image" alt=""/>
 <!--            <div id="dialog" style="padding-top: 60px; font-size: 400%">4 0 4</div>-->
         </div>
     </div>
