-new bgm -new pages

--- a/contents.html
+++ b/contents.html
@@ -409,7 +409,7 @@
                                             如果你能看到这篇blog，说明我已经到达了冥界 <br>
                                             先说结果吧，这个网站是真的，虽然我并不知道它是为什么突然出现的，但是我明白它在呼唤着我
                                             <br>
-                                            <a href="cursed_test.html" class="justify-content-md-center">
+                                            <a href="mOHaWiMhIoAw.html" class="justify-content-md-center">
                                                 【https://mOHaWiMhIoAw.com】
                                             </a>
                                             <br>
