--- a/mOHaWiMhIoAw.html
+++ b/mOHaWiMhIoAw.html
@@ -35,7 +35,7 @@
         美工：蛋
         文案：蛋
         音乐：网络免费素材
-        测试者名单：林希 小雪 馥婉 夜半 火 某猫 雨 洛清 等
+        测试者名单：林希 小雪 馥婉 夜半 火 kk 某猫 雨 佚名 洛清 等
         751501871
     </script>
 </head>
