--- a/mOHaWiMhIoAw.html
+++ b/mOHaWiMhIoAw.html
@@ -37,6 +37,8 @@
         音乐：网络免费素材
         测试者名单：林希 小雪 馥婉 夜半 火 kk 某猫 雨 佚名 洛清 等
         751501871
+        似乎blog图片隐藏着什么秘密的样子—————
+        嘘，可别让他知道了，这是本世纪的、咳咳，本人的忠告，给我记好咯
     </script>
 </head>
 <body id="cursed_page">
