--- a/mOHaWiMhIoAw.html
+++ b/mOHaWiMhIoAw.html
@@ -41,6 +41,14 @@
         似乎blog图片隐藏着什么秘密的样子—————稍微有点好奇
         嘘，可别让他知道了，
         这是本世纪的、咳咳，本人的忠告，给我记好咯
+        ————————————————————————————————————————————
+        哼哼，你这家伙还挺聪明嘛
+        居然连这个也被解开了，越来越有意思了
+        那作为奖励，再告诉你一件有意思的事情吧
+        你的话想要找到肯定是小菜一碟啦，这是本人的判断
+        别一副不情愿的样子嘛，好好听着~
+        68747470733a2f2f64726976652e676f6f676c652e636f6d2f66696c652f642f31644c7053673370535565334454335038684e4b5a63755f77426e32785561644d2f766965773f7573703d73686172696e67a
+        
     </script>
 </head>
 <body id="cursed_page">
